Display Data in the table

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -7,5 +7,11 @@ appTitle=App Title
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
+
 #XTIT: Main view title
-title=App Title
+booksListTitle=List of books
+columnName=Name
+columnAuthor=Author
+columnGenre=Genre
+columnReleaseDate=Release Date
+columnAvailableQuantity=Available Quantity
