Add implementation of the task

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -15,3 +15,6 @@ columnAuthor=Author
 columnGenre=Genre
 columnReleaseDate=Release Date
 columnAvailableQuantity=Available Quantity
+buttonAddRecord=Add Record
+buttonDeleteRecord=Delete Record
+buttonFilter=Filter
