[Task 2-5] Title edit

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -15,6 +15,9 @@ columnAuthor=Author
 columnGenre=Genre
 columnReleaseDate=Release Date
 columnAvailableQuantity=Available Quantity
+columnActions=Actions
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
 buttonFilter=Filter
+buttonEdit=Edit
+buttonSave=Save
