[Task 3-1] Confirmation Dialog

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -22,3 +22,9 @@ buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
 buttonCancel=Cancel
+
+dialogNoButtonText=No
+dialogYesButtonText=Yes
+confirmationDialogText=Are you sure you want to delete selected records?
+confirmationDialogHeaderText=Confirmation dialog
+confirmationDialogSelectItemError=Please, select a book
