[Task 3-2] Record creation

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -25,6 +25,14 @@ buttonCancel=Cancel
 
 dialogNoButtonText=No
 dialogYesButtonText=Yes
-confirmationDialogText=Are you sure you want to delete selected records?
-confirmationDialogHeaderText=Confirmation dialogNoButtonText
-confirmationDialogError=Something went wrong, please try again later
+dialogAddButtonText=Add
+dialogCancelButtonText=Cancel
+
+bookCreationDialogHeaderText=Do you want to add a book?
+bookCreationDialogNamePlaceholder=Name
+bookCreationDialogAuthorPlaceholder=Author
+bookCreationDialogGenrePlaceholder=Genre
+bookCreationDialogReleaseDatePlaceholder=Release Date
+bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
+bookCreationDialogAddItemError=Please, fill all data
+bookCreationDialogReleaseDateError=Please, fill the valid release date
