--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=App Title
+appTitle=Course project
 
 #YDES: Application description
 appDescription=An SAP Fiori application.
@@ -16,6 +16,7 @@ columnGenre=Genre
 columnReleaseDate=Release Date
 columnAvailableQuantity=Available Quantity
 columnActions=Actions
+cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
 buttonFilter=Filter
