--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -26,5 +26,5 @@ buttonCancel=Cancel
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 confirmationDialogText=Are you sure you want to delete selected records?
-confirmationDialogHeaderText=Confirmation dialog
-confirmationDialogSelectItemError=Please, select a book
+confirmationDialogHeaderText=Confirmation dialogNoButtonText
+confirmationDialogError=Something went wrong, please try again later
