[Task 3-5] oData Model integration

--- a/project1/webapp/i18n/i18n_en.properties
+++ b/project1/webapp/i18n/i18n_en.properties
@@ -16,6 +16,10 @@ columnGenre=Genre
 columnReleaseDate=Release Date
 columnAvailableQuantity=Available Quantity
 columnActions=Actions
+columnDescription=Description
+columnDiscontinuedDate=Discontinued Date
+columnRating=Rating
+columnPrice=Price
 cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
@@ -37,3 +41,7 @@ bookCreationDialogReleaseDatePlaceholder=Release Date
 bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
+
+tabJSONModel=JSON Model
+tabV2Model=oData v2 Model
+tabV4Model=oData v4 Model
