--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -23,6 +23,7 @@ columnPrice=Price
 cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
+buttonDelete=Delete
 buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
@@ -46,3 +47,6 @@ tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
 tabV4Model=oData v4 Model
 
+deletionSuccessMessage=The book was deleted successfully
+deletionSuccessMessagePlural=Books were deleted successfully
+deletionErrorMessage=Something went wrong please try again.
