--- a/project1/webapp/test/i18n/i18n_en.properties
+++ b/project1/webapp/test/i18n/i18n_en.properties
@@ -19,6 +19,7 @@ columnActions=Actions
 cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
+buttonDelete=Delete
 buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
