[Task 4-2] oData v2 – Record Creation

--- a/project1/webapp/i18n/i18n_en.properties
+++ b/project1/webapp/i18n/i18n_en.properties
@@ -24,6 +24,7 @@ cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
 buttonDelete=Delete
+buttonAdd=Add
 buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
@@ -42,6 +43,14 @@ bookCreationDialogReleaseDatePlaceholder=Release Date
 bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
+
+productCreationDialogNamePlaceholder=Name
+productCreationDialogDescriptionPlaceholder=Description
+productCreationDialogRatingPlaceholder=Rating
+productCreationDialogPricePlaceholder=Price
+productCreationDialogReleaseDatePlaceholder=Release Date
+productCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
+productCreationDialogValidationError=Please, fill the valid data
 
 tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
