--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -24,6 +24,7 @@ cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
 buttonDelete=Delete
+buttonAdd=Add
 buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
@@ -43,10 +44,20 @@ bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
 
+productCreationDialogNamePlaceholder=Name
+productCreationDialogDescriptionPlaceholder=Description
+productCreationDialogRatingPlaceholder=Rating
+productCreationDialogPricePlaceholder=Price
+productCreationDialogReleaseDatePlaceholder=Release Date
+productCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
+productCreationDialogValidationError=Please, fill the valid data
+
 tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
 tabV4Model=oData v4 Model
 
-deletionSuccessMessage=The book was deleted successfully
-deletionSuccessMessagePlural=Books were deleted successfully
-deletionErrorMessage=Something went wrong please try again.
+deletionSuccessMessage=The product was deleted successfully
+deletionSuccessMessagePlural=Products were deleted successfully
+deletionErrorMessage=Something went wrong please try again
+creationSuccessMessage=The product was created successfully
+creationErrorMessage=Something went wrong please try again
