--- a/project1/webapp/test/i18n/i18n_en.properties
+++ b/project1/webapp/test/i18n/i18n_en.properties
@@ -16,10 +16,15 @@ columnGenre=Genre
 columnReleaseDate=Release Date
 columnAvailableQuantity=Available Quantity
 columnActions=Actions
+columnDescription=Description
+columnDiscontinuedDate=Discontinued Date
+columnRating=Rating
+columnPrice=Price
 cellPublished=Published
 buttonAddRecord=Add Record
 buttonDeleteRecord=Delete Record
 buttonDelete=Delete
+buttonAdd=Add
 buttonFilter=Filter
 buttonEdit=Edit
 buttonSave=Save
@@ -36,5 +41,18 @@ bookCreationDialogAuthorPlaceholder=Author
 bookCreationDialogGenrePlaceholder=Genre
 bookCreationDialogReleaseDatePlaceholder=Release Date
 bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
+bookCreationDialogDescriptionPlaceholder=Description
+bookCreationDialogRatingPlaceholder=Rating
+bookCreationDialogPricePlaceholder=Price
+bookCreationDialogReleaseDatePlaceholder=Release Date
+bookCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
+
+tabJSONModel=JSON Model
+tabV2Model=oData v2 Model
+tabV4Model=oData v4 Model
+
+deletionSuccessMessage=The book was deleted successfully
+deletionSuccessMessagePlural=Books were deleted successfully
+deletionErrorMessage=Something went wrong please try again.
