[Task 4-3] oData v2 – Edit Record

--- a/project1/webapp/i18n/i18n_en.properties
+++ b/project1/webapp/i18n/i18n_en.properties
@@ -33,6 +33,7 @@ buttonCancel=Cancel
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 dialogAddButtonText=Add
+dialogSaveButtonText=Save
 dialogCancelButtonText=Cancel
 
 bookCreationDialogHeaderText=Do you want to add a book?
@@ -47,6 +48,7 @@ bookCreationDialogReleaseDateError=Please, fill the valid release date
 confirmationDialogText=Are you sure you want to delete selected books?
 
 productCreationDialogHeaderText=Do you want to add a product?
+productEditDialogHeaderText=Do you want to edit a product?
 productCreationDialogNamePlaceholder=Name
 productCreationDialogDescriptionPlaceholder=Description
 productCreationDialogRatingPlaceholder=Rating
@@ -66,3 +68,5 @@ deletionSuccessMessagePlural=Products were deleted successfully
 deletionErrorMessage=Something went wrong please try again
 creationSuccessMessage=The product was created successfully
 creationErrorMessage=Something went wrong please try again
+editSuccessMessage=The book was edited successfully
+editErrorMessage=Something went wrong please try again
