--- a/project1/webapp/test/i18n/i18n.properties
+++ b/project1/webapp/test/i18n/i18n.properties
@@ -33,6 +33,7 @@ buttonCancel=Cancel
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 dialogAddButtonText=Add
+dialogSaveButtonText=Save
 dialogCancelButtonText=Cancel
 
 bookCreationDialogHeaderText=Do you want to add a book?
@@ -41,14 +42,19 @@ bookCreationDialogAuthorPlaceholder=Author
 bookCreationDialogGenrePlaceholder=Genre
 bookCreationDialogReleaseDatePlaceholder=Release Date
 bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
-bookCreationDialogDescriptionPlaceholder=Description
-bookCreationDialogRatingPlaceholder=Rating
-bookCreationDialogPricePlaceholder=Price
-bookCreationDialogReleaseDatePlaceholder=Release Date
-bookCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
 productCreationDialogHeaderText=Do you want to add a product?
+
+productCreationDialogHeaderText=Do you want to add a product?
+productEditDialogHeaderText=Do you want to edit a product?
+productCreationDialogNamePlaceholder=Name
+productCreationDialogDescriptionPlaceholder=Description
+productCreationDialogRatingPlaceholder=Rating
+productCreationDialogPricePlaceholder=Price
+productCreationDialogReleaseDatePlaceholder=Release Date
+productCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
+productCreationDialogValidationError=Please, fill the valid data
 
 tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
@@ -56,4 +62,8 @@ tabV4Model=oData v4 Model
 
 deletionSuccessMessage=The book was deleted successfully
 deletionSuccessMessagePlural=Books were deleted successfully
-deletionErrorMessage=Something went wrong please try again.
+deletionErrorMessage=Something went wrong please try again
+creationSuccessMessage=The book was created successfully
+creationErrorMessage=Something went wrong please try again
+editSuccessMessage=The book was edited successfully
+editErrorMessage=Something went wrong please try again
