--- a/project1/webapp/i18n/i18n_en.properties
+++ b/project1/webapp/i18n/i18n_en.properties
@@ -33,6 +33,7 @@ buttonCancel=Cancel
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 dialogAddButtonText=Add
+dialogSaveButtonText=Save
 dialogCancelButtonText=Cancel
 
 bookCreationDialogHeaderText=Do you want to add a book?
@@ -44,6 +45,8 @@ bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
 
+productCreationDialogHeaderText=Do you want to add a product?
+productEditDialogHeaderText=Do you want to edit a product?
 productCreationDialogNamePlaceholder=Name
 productCreationDialogDescriptionPlaceholder=Description
 productCreationDialogRatingPlaceholder=Rating
@@ -58,4 +61,8 @@ tabV4Model=oData v4 Model
 
 deletionSuccessMessage=The book was deleted successfully
 deletionSuccessMessagePlural=Books were deleted successfully
-deletionErrorMessage=Something went wrong please try again.
+deletionErrorMessage=Something went wrong please try again
+creationSuccessMessage=The book was created successfully
+creationErrorMessage=Something went wrong please try again
+editSuccessMessage=The book was edited successfully
+editErrorMessage=Something went wrong please try again
