[Task 4-4] oData v2 – Live Change Filter

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -30,6 +30,8 @@ buttonEdit=Edit
 buttonSave=Save
 buttonCancel=Cancel
 
+searchInputPlaceholder=Please enter Product Name
+
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 dialogAddButtonText=Add
@@ -66,3 +68,4 @@ creationSuccessMessage=The book was created successfully
 creationErrorMessage=Something went wrong please try again
 editSuccessMessage=The book was edited successfully
 editErrorMessage=Something went wrong please try again
+
