--- a/project1/webapp/i18n/i18n_en.properties
+++ b/project1/webapp/i18n/i18n_en.properties
@@ -30,6 +30,8 @@ buttonEdit=Edit
 buttonSave=Save
 buttonCancel=Cancel
 
+searchInputPlaceholder=Please enter Product Name
+
 dialogNoButtonText=No
 dialogYesButtonText=Yes
 dialogAddButtonText=Add
