Update previous solution

--- a/project1/webapp/test/i18n/i18n.properties
+++ b/project1/webapp/test/i18n/i18n.properties
@@ -48,6 +48,7 @@ bookCreationDialogReleaseDatePlaceholder=Release Date
 bookCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
+productCreationDialogHeaderText=Do you want to add a product?
 
 tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
