--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -44,6 +44,8 @@ bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
 
+productCreationDialogHeaderText=Do you want to add a product?
+
 productCreationDialogNamePlaceholder=Name
 productCreationDialogDescriptionPlaceholder=Description
 productCreationDialogRatingPlaceholder=Rating
