Add confirmation dialog for products deleting

--- a/project1/webapp/i18n/i18n.properties
+++ b/project1/webapp/i18n/i18n.properties
@@ -44,8 +44,9 @@ bookCreationDialogAvailableQuantityPlaceholder=Available Quantity
 bookCreationDialogAddItemError=Please, fill all data
 bookCreationDialogReleaseDateError=Please, fill the valid release date
 
-productCreationDialogHeaderText=Do you want to add a product?
+confirmationDialogText=Are you sure you want to delete selected books?
 
+productCreationDialogHeaderText=Do you want to add a product?
 productCreationDialogNamePlaceholder=Name
 productCreationDialogDescriptionPlaceholder=Description
 productCreationDialogRatingPlaceholder=Rating
@@ -53,6 +54,8 @@ productCreationDialogPricePlaceholder=Price
 productCreationDialogReleaseDatePlaceholder=Release Date
 productCreationDialogDiscontinuedDatePlaceholder=Discontinued Date
 productCreationDialogValidationError=Please, fill the valid data
+
+productsDeleteConfirmationDialogText=Are you sure you want to delete selected products?
 
 tabJSONModel=JSON Model
 tabV2Model=oData v2 Model
